# tsum-dask

./: README.md  pyproject.toml  script.py  tox.ini
tests/: conftest.py  test_tsum.py
tsum/: __init__.py  benefit.py  coverage.py  expand.py  local_expansion.py  log.py  model.py  overhead.py  pattern_marshalling.py  residue.py  saving.py  util.py
