[tool.poetry]
name = "tsum"
version = "0.1.0"
description = "Summarize data in Dask DataFrames."
authors = ["Fasih Khatib <hellofasih.confound928@passinbox.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
attrs = "^23.2.0"
cattrs = "^23.2.3"
dask = {extras = ["dataframe", "distributed"], version = "^2024.4.1"}
frozendict = "^2.4.1"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pandas = "^2.2.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
tox = "^4.14.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
